--- a/formulaire.html
+++ b/formulaire.html
@@ -16,4 +16,72 @@
     <input type="radio" id="color" name="color" value="3"> Gris<br>
     <input type="submit" value="Submit">
   </form>
+   <style>
+body {
+  background-color: #ececec; /* couleur de fond grise claire */
+}
+form {
+  width: 400px;
+  margin: 50px auto; /* marges supérieure et inférieure de 50px et automatiques sur les côtés */
+  text-align: center;
+  font-family: sans-serif;
+}
+h1{
+  text-align: center;
+  font-family: sans-serif;
+}
+h2{
+  text-align: center;
+  font-family: sans-serif;
+}
+  
+  label {
+    display: block;
+    margin-bottom: 8px;
+  }
+  
+  input[type="text"] {
+    width: 60%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+  }
+  form h3 {
+  text-align: center; /* centrer le titre */
+}
+
+form input[type="radio"] {
+  display: block; /* affichage en block pour que chaque bouton occupe toute la largeur de son parent */
+  margin: 0 auto; /* marges automatiques sur les côtés */
+}
+  
+  input[type="submit"] {
+    width: 20%;
+    background-color: #14028a;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    display: block; /* affichage en block pour que le bouton occupe toute la largeur de son parent */
+    margin: 20px auto; /* marges de 20px sur les côtés et auto en haut et en bas */
+  }
+  
+  input[type="submit"]:hover {
+    background-color: #45a049;
+  }
+  
+  h3 {
+    text-align: left;
+    margin-left: 20px;
+  }
+  
+  input[type="radio"] {
+    margin: 0 10px 0 20px;
+  }
+  
+  </style>
 </body>
